Fix nav overflow

--- a/css/style.css
+++ b/css/style.css
@@ -28,16 +28,15 @@ main {
   display: flex;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 #nav-lg {
-  display: flex;
-  flex-wrap: wrap;
-  align-content: space-between;
-  /* position: relative; */
   width: 250px;
+  height: 100%;
+  min-height: 400px;
   background-color: #040404;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 #nav-xs {
@@ -53,25 +52,25 @@ main {
 footer {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
   height: 100px;
   padding: 20px;
   background-color: #282828;
 }
 
-/* green spotify #1DB954 */
-
 /*/STRUCTURE */
 
 /* START MAIN */
 
 /* nav-lg */
-#nav-lg {
-  font-size: 14px;
-}
 
 #nav-lg .nav-lg-top {
+  display: flex;
+  flex-direction: column;
   width: 100%;
+  height: calc(100% - 80px);
+  overflow-y: hidden;
 }
 
 #nav-lg .nav-lg-top #logo {
@@ -82,7 +81,7 @@ footer {
 
 #nav-lg .nav-lg-top #logo a {
   display: inline-block;
-  width: 150px;
+  width: 70%;
 }
 
 #nav-lg .nav-lg-top #nav-desktop {
@@ -94,11 +93,16 @@ footer {
   margin-top: 30px;
 }
 
+#nav-lg .nav-lg-top #nav-desktop li:not([class="nav_active"]) {
+  padding-left: 20px;
+}
+
 #nav-lg .nav-lg-top #nav-desktop a {
   display: inline-block;
-  padding: 10px 0 0 20px;
+  height: 40px;
+  line-height: 40px;
   color: #7a7a7a;
-  font-weight: 700;
+  font-size: 14px;
 }
 
 #nav-lg .nav-lg-top #nav-desktop a:hover,
@@ -115,13 +119,18 @@ footer {
 }
 
 .nav_active {
-  border-left: 2px solid #1DB954;
+  border-left: 5px solid #1DB954;
+  padding-left: 15px;
 }
 
 #nav-lg .nav-lg-top #playlist {
+  display: flex;
+  flex-direction: column;
   width: 100%;
+  height: 50%;
   margin-top: 30px;
   padding: 0 20px;
+  overflow: hidden;
 }
 
 #nav-lg .nav-lg-top #playlist h4 {
@@ -135,7 +144,7 @@ footer {
 #nav-lg .nav-lg-top #playlist .new_playlist {
   display: inline-block;
   color: #7a7a7a;
-  font-weight: 700;
+  font-size: 16px;
 }
 
 #nav-lg .nav-lg-top #playlist .new_playlist:hover,
@@ -151,9 +160,10 @@ footer {
   vertical-align: middle;
 }
 
-/* nav #playlist .playlist_scroll {
+#nav-lg .nav-lg-top #playlist .playlist_scroll {
+  height: 75%;
   overflow-y: auto;
-} */
+}
 
 #nav-lg .nav-lg-top #playlist .playlist_scroll ul {
   list-style: none;
@@ -164,7 +174,7 @@ footer {
   display: inline-block;
   margin-top: 10px;
   color: #7a7a7a;
-  font-weight: 700;
+  font-size: 14px;
 }
 
 #nav-lg .nav-lg-top #playlist .playlist_scroll ul a:hover {
@@ -174,15 +184,13 @@ footer {
 
 #nav-lg .nav-lg-bottom {
   width: 100%;
+  height: 80px;
+  padding: 10px 20px;
+  background-color: #040404;
 }
 
 #nav-lg .nav-lg-bottom #user {
-  /* position: absolute;
-  bottom: 0;
-  left: 0; */
   width: 100%;
-  padding: 10px 20px;
-  background-color: #040404;
 }
 
 #nav-lg .nav-lg-bottom #user .app {
@@ -193,7 +201,7 @@ footer {
 #nav-lg .nav-lg-bottom #user .app a {
   display: inline-block;
   color: #7a7a7a;
-  font-weight: 700;
+  font-size: 14px;
 }
 
 #nav-lg .nav-lg-bottom #user .app i {
@@ -212,8 +220,7 @@ footer {
 #nav-lg .nav-lg-bottom #user .current_user a {
   display: inline-block;
   color: #fff;
-  font-size: 16px;
-  font-weight: 700;
+  font-size: 14px;
 }
 #nav-lg .nav-lg-bottom #user .current_user a:hover {
   text-decoration: none;
